--- a/app/src/main/res/layout/fragment_single_news.xml
+++ b/app/src/main/res/layout/fragment_single_news.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView android:id="@+id/news_content"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</FrameLayout>
+        <TextView
+                android:id="@+id/title"
+                android:padding="@dimen/title_padding"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/title_size"
+                android:textStyle="bold"/>
+
+        <TextView
+                android:padding="@dimen/content_padding"
+                android:id="@+id/news_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+    </LinearLayout>
+
+</ScrollView>
