--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="item_padding">16dp</dimen>
+    <dimen name="content_padding">8dp</dimen>
+    <dimen name="title_padding">8dp</dimen>
+    <dimen name="title_size">18sp</dimen>
 </resources>
